--- a/assets/front/css/home.css
+++ b/assets/front/css/home.css
@@ -1,13 +1,14 @@
 /* Home page banner section */
-.home-page-banner{
-    position: relative!important;
-    height: 700px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
+.home-page-banner {
+  position: relative !important;
+  height: 700px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  margin-top: -11%;
 }
-.banner-caption h1{
-  font-size:70px;
+.banner-caption h1 {
+  font-size: 3.5rem;
   font-weight: 800;
 }
 
@@ -32,8 +33,8 @@
 /* Home banner section */
 
 /* About us section */
-.home-about-us{
- margin-top: 70px;
+.home-about-us {
+  margin-top: 15%;
 }
 
 .btn-about{
@@ -399,13 +400,14 @@ dreamit BLOG AREA CSS
 	padding: 100px 0 97px;
 }
 .dreamit-single-blog {
-	background-color: #fff;
-	overflow: hidden;
-	text-align: left;
-	-webkit-transition: all 0.3s ease-in-out 0s;
-	transition: all 0.3s ease-in-out 0s;
-	margin-bottom: 30px;
-	border: 1px solid #ddd;
+  background-color: #fff;
+  overflow: hidden;
+  text-align: left;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+  margin-bottom: 30px;
+  border: 1px solid #ddd;
+  padding: 30px;
 }
 .blog-black .dreamit-single-blog {
 	background-color: #121212;
@@ -603,4 +605,49 @@ dreamit BLOG AREA CSS
 }
 /* blog section */
 
+.column img{
+  /* border-radius: 10px; */
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
 
+
+.image-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.image-container:hover {
+  border: 1px solid black;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: transparent;
+  opacity: 0;
+  transition: opacity 0.5s, background-color 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text {
+  color: black;
+  font-size: 20px;
+  text-align: center;
+  transform: translateY(100%); 
+  transition: transform 0.5s; 
+}
+
+
+.image-container:hover .overlay {
+  opacity: 1;
+  background-color: white;
+}
+
+.image-container:hover .text {
+  transform: scale(1);
+}
